# claude-icedos

./: .gitignore  AGENTS.md
modules/climit/: config.toml  icedos.nix
modules/climit/plasmoid/: metadata.json
modules/climit/plasmoid/contents/config/: main.xml
modules/climit/plasmoid/contents/ui/: configGeneral.qml  main.qml
modules/climit/src/: pyproject.toml
modules/climit/src/climit/: __init__.py  auth.py  cli.py  config.py  contrib.py  notify.py  poller.py  rates.py  sources.py  store.py
modules/climit/src/tests/: test_auth.py  test_contrib.py  test_rates.py  test_store.py
modules/default/: config.toml  icedos.nix  marketplaces.toml  mcp-servers.toml
modules/peon-ping/: config.toml  custom-packs.toml  icedos.nix
